[gd_scene load_steps=19 format=3 uid="uid://dkbyqg4etp3pv"]

[ext_resource type="Script" path="res://arena.gd" id="1_1v0vr"]
[ext_resource type="Script" path="res://ship.gd" id="1_cqiuf"]
[ext_resource type="Texture2D" uid="uid://ubis1aidfkpe" path="res://images/character.png" id="1_p64oq"]
[ext_resource type="Script" path="res://nav_region.gd" id="3_fxh1s"]
[ext_resource type="PackedScene" uid="uid://bi0cmvb2q7pgx" path="res://wall.tscn" id="4_twsyb"]
[ext_resource type="AudioStream" uid="uid://b6ch7godjdvs1" path="res://sounds/Fantasy_UI (6).wav" id="5_ahoe7"]
[ext_resource type="Texture2D" uid="uid://d0nyoupgoup5q" path="res://images/sparkle.png" id="5_pv7v0"]
[ext_resource type="AudioStream" uid="uid://dfawj8eobl4ir" path="res://sounds/Hammer2.wav" id="6_ehtxo"]
[ext_resource type="Script" path="res://agent.gd" id="7_iugb6"]
[ext_resource type="AudioStream" uid="uid://01u4ya1mbnij" path="res://sounds/Glitch_13.wav" id="9_avenh"]
[ext_resource type="AudioStream" uid="uid://bb317basp5s3t" path="res://sounds/Whoosh 3.wav" id="9_ogv0w"]
[ext_resource type="AudioStream" uid="uid://bqwlnmlmxcfef" path="res://sounds/Impact_2_Mid.wav" id="10_3iuv8"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_f85l1"]
vertices = PackedVector2Array(1330, 830, 70.9375, 830, 70.0625, 105, 1330, 105)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(20, 55, 1380, 55, 1380, 880, 21, 880)])
source_geometry_mode = 1
source_geometry_group_name = &"walls"
agent_radius = 29.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_67qv6"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CircleShape2D" id="CircleShape2D_pdhkn"]
radius = 29.0

[sub_resource type="LabelSettings" id="LabelSettings_p7n4o"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_d6qv0"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_ujfik"]
font_size = 60

[node name="arena" type="Node2D"]
process_mode = 1
editor_description = "This is the description."
script = ExtResource("1_1v0vr")

[node name="walls" type="Node2D" parent="." groups=["walls"]]
unique_name_in_owner = true

[node name="top_wall" parent="walls" instance=ExtResource("4_twsyb")]
unique_name_in_owner = true
position = Vector2(700, 50)
scale = Vector2(138, 1)

[node name="bottom_wall" parent="walls" instance=ExtResource("4_twsyb")]
unique_name_in_owner = true
position = Vector2(700, 885)
scale = Vector2(138, 1)

[node name="left_wall" parent="walls" instance=ExtResource("4_twsyb")]
unique_name_in_owner = true
position = Vector2(15, 468)
rotation = 1.5708
scale = Vector2(83, 1)

[node name="right_wall" parent="walls" instance=ExtResource("4_twsyb")]
unique_name_in_owner = true
position = Vector2(1385, 468)
rotation = 1.5708
scale = Vector2(83, 1)

[node name="nav_region" type="NavigationRegion2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -1)
navigation_polygon = SubResource("NavigationPolygon_f85l1")
script = ExtResource("3_fxh1s")

[node name="lasers" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="debug_path" type="Line2D" parent="."]
unique_name_in_owner = true
visible = false
width = 3.0

[node name="ship" type="CharacterBody2D" parent="."]
editor_description = "This is the ship."
position = Vector2(700, 450)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_cqiuf")
metadata/_edit_group_ = true

[node name="particles" type="CPUParticles2D" parent="ship"]
material = SubResource("CanvasItemMaterial_67qv6")
position = Vector2(-20, 0)
rotation = 1.5708
lifetime = 0.3
texture = ExtResource("5_pv7v0")
emission_shape = 1
emission_sphere_radius = 8.0
direction = Vector2(0, 1)
spread = 25.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 50.0

[node name="sprite" type="Sprite2D" parent="ship"]
position = Vector2(4, 0)
scale = Vector2(0.8, 0.8)
texture = ExtResource("1_p64oq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ship"]
visible = false
shape = SubResource("CircleShape2D_pdhkn")

[node name="agent" type="Node2D" parent="ship"]
script = ExtResource("7_iugb6")

[node name="gems" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="score_label" type="Label" parent="."]
offset_left = 1127.0
offset_top = 3.0
offset_right = 1363.0
offset_bottom = 45.0
size_flags_horizontal = 8
text = "Score: 0"
label_settings = SubResource("LabelSettings_p7n4o")
horizontal_alignment = 2

[node name="level_label" type="Label" parent="."]
offset_left = 35.0
offset_top = 3.0
offset_right = 148.0
offset_bottom = 45.0
size_flags_horizontal = 8
text = "Level 1"
label_settings = SubResource("LabelSettings_p7n4o")

[node name="time_label" type="Label" parent="."]
offset_left = 670.0
offset_top = 3.0
offset_right = 783.0
offset_bottom = 45.0
size_flags_horizontal = 8
text = "1:00"
label_settings = SubResource("LabelSettings_d6qv0")

[node name="laser_icons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 172.0
offset_top = 23.0
offset_right = 272.0
offset_bottom = 63.0

[node name="game_over" type="Label" parent="."]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 550.0
offset_top = 415.0
offset_right = 837.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME  OVER"
label_settings = SubResource("LabelSettings_ujfik")

[node name="pickup_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ahoe7")

[node name="bounce_sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_ehtxo")
volume_db = -11.243

[node name="fire_sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("9_avenh")

[node name="hit_wall_sound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("10_3iuv8")

[node name="next_level_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ogv0w")
